Added editor template.

--- a/data/launcher.glade
+++ b/data/launcher.glade
@@ -962,6 +962,20 @@ Joakim Jonsson</property>
                   </packing>
                 </child>
                 <child>
+                  <object class="GtkButton" id="editor_button">
+                    <property name="label" translatable="yes">Editor</property>
+                    <property name="visible">True</property>
+                    <property name="sensitive">False</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">True</property>
+                  </object>
+                  <packing>
+                    <property name="expand">True</property>
+                    <property name="fill">True</property>
+                    <property name="position">2</property>
+                  </packing>
+                </child>
+                <child>
                   <object class="GtkButton" id="about_button">
                     <property name="label" translatable="yes">About</property>
                     <property name="visible">True</property>
@@ -971,7 +985,7 @@ Joakim Jonsson</property>
                   <packing>
                     <property name="expand">True</property>
                     <property name="fill">True</property>
-                    <property name="position">2</property>
+                    <property name="position">3</property>
                   </packing>
                 </child>
               </object>
