--- a/data/launcher.glade
+++ b/data/launcher.glade
@@ -873,6 +873,7 @@ Joakim Jonsson</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">False</property>
+                            <property name="active">True</property>
                             <property name="draw_indicator">True</property>
                           </object>
                           <packing>
